--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Mobile Designer, Mobile Developer, Front End Developer, Apps Designer, Apps Developer</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="https://drive.google.com/file/d/13ZH8mSnHzQ48OfucZeA6ZbvnKRM-23aJ/view?usp=sharing" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+                        <a href="./assets/resume.pdf class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
