open url to new tab

--- a/index.html
+++ b/index.html
@@ -472,11 +472,13 @@
                             <img class="img-fluid w-100" src="img/project-4.png" alt="Kompas.id App">
                             
                             <div class="portfolio-btn">
-                                <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" 
+                                <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-4.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://play.google.com/store/apps/details?id=id.kompas.app" target="_blank"><i class="fa fa-link"></i></a>
+                                <!-- <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" 
                                 href="https://play.google.com/store/apps/details?id=id.kompas.app" 
                                 target="_blank">
                                 <i class="fab fa-google-play"></i>
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                     <!-- </div> -->
@@ -487,11 +489,13 @@
                             <img class="img-fluid w-100" src="img/project-5.png" alt="M-Stock">
                             
                             <div class="portfolio-btn">
-                                <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" 
+                                <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-5.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://apps.apple.com/id/app/m-stock-aplikasi-investasi/id1670096144" target="_blank"><i class="fa fa-link"></i></a>
+                                <!-- <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" 
                                 href="https://apps.apple.com/id/app/m-stock-aplikasi-investasi/id1670096144" 
                                 target="_blank">
                                 <i class="fab fa-apple"></i>
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                     <!-- </div> -->
@@ -675,9 +679,9 @@
                     <p class="mb-2">Follow me:</p>
                     <div class="d-flex pt-2 justify-content-center">
                         <!-- <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-twitter"></i></a> -->
-                        <a class="btn btn-square btn-primary me-2" href="https://www.hackerrank.com/profile/Novilawati"><i class="fab fa-hackerrank"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://github.com/devrouw"><i class="fab fa-github"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/novilawati-350710113"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.hackerrank.com/profile/Novilawati" target="_blank"><i class="fab fa-hackerrank"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://github.com/devrouw" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/novilawati-350710113" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <!-- <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
